...
    <string name="app_name">nav between intent</string>

    <string name="result">Result:</string>
    <string name="result_op">0</string>
    <string name="go_back">Back</string>

    <string name="addition_n">Sumar</string>
    <string name="substract_n">Restar</string>
    <string name="multiplication_n">Multiplicar</string>
    <string name="division_n">Dividir</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
