...
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="120dp"
        android:text="@string/division_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginBottom="56dp"
        android:text="@string/addition_n"
        android:textColor="#fff"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="wrap_content"
...
